# distributed-notification-system

./: package-lock.json
.github/workflows/: email_service.yml
email_service/: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
email_service/.github/workflows/: email_service.yml
email_service/scripts/: send-test-email.ts
email_service/src/: app.module.ts  main.ts
email_service/src/bootstrap/: rabbitmq.setup.ts
email_service/src/email/: email.consumer.ts  email.service.ts
email_service/src/email/health/: health.controller.ts
email_service/src/email/metrics/: metrics.controller.ts
email_service/src/email/status/: status.consumer.ts  status.publisher.ts
email_service/src/email/templates/: default.hbs
email_service/src/email/utils/: bounce.utils.ts  circuit-breaker.utils.ts  redis.utils.ts  retry.utils.ts  service-discovery.ts
email_service/src/status/: status.publisher.ts
push_notification_service/: .gitignore  pom.xml
push_notification_service/src/main/java/com/bituan/push_notification_service/: PushNotificationServiceApplication.java
push_notification_service/src/main/resources/: application.properties
template_service/: .env.sample  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
template_service/config/: api.py  settings.py  utils.py
template_service/template_service/: admin.py  api.py  apps.py  exceptions.py  models.py  schemas.py  services.py  tests.py  utils.py
(+14 files in other folders)
